welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:4: error: illegal start of simple expression
	}else if(a+b==(10+b+c) || a+b==(10+c+a))){
                                                ^